--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^1.17.3"
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "chalk": "^2.4.0",
     "debug": "^3.1.0",
     "express": "^4.16.3"
